shop.demo-aks.org/shop-ns/ingress.yaml
kind: istio
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shop-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - shop.aks-demo.org
    port:
      name: https-443-shop.aks-demo.org
      number: 443
      protocol: HTTPS
    tls:
      credentialName: cert-shop.aks-demo.org
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService
metadata:
  name: shop-vs
spec:
  hosts:
  - shop.aks-demo.org
  gateways:
  - shop-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: "frontend.shop.svc.cluster.local"
        subset: frontend
        port:
          number: 80
    timeout: 3s
    retries:
      attempts: 3
      perTryTimeout: 1s
      retryOn: gateway-error,connect-failure,refused-stream,5xx
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shop-dr
spec:
  host: "frontend.shop.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: frontend
    labels:
      app: frontend
